--- a/popup.html
+++ b/popup.html
@@ -8,20 +8,23 @@
 
 <body>
     <div>
+        <h2 id="banner">Vaccine Slot Notifier</h1>
+    </div>
+    <div>
         <div>
             <div class="section">
                 <div class="heading">
-                <h4 id="title" class="label create">Check vaccine slots availablity</h4>
-                <h4 id="info" class="label view">Vaccine slots are currently being checked for pin:</h4>
+                    <h4 id="title" class="label create">Check vaccine slots availablity</h4>
+                    <h4 id="info" class="label view">Vaccine slots are currently being checked for pin:</h4>
                 </div>
                 <div class="inputBox">
-                <input id="pin" type="text" name="pincode" value="" title="pincode" placeholder="Enter your pincode" />
+                    <input id="pin" type="text" name="pincode" value="" title="pincode" placeholder="Enter your pincode" />
                 </div>
             </div>
             <div class="section" id="ageSelector">
                 <div class="heading">
-                <h4 class="label create">Select your age group:</h4>
-                <h4 class="label view" id="ageDisplay">Selected age group:</h4>
+                    <h4 class="label create">Select your age group:</h4>
+                    <h4 class="label view" id="ageDisplay">Selected age group:</h4>
                 </div>
                 <div class="radiogroup" style="display: flex;">
                     <div>
@@ -36,8 +39,8 @@
             </div>
         </div>
         <div style="margin-top: 12px; margin-right: 5px;">
-        <button id="submit" class="btn-primary">Submit</button>
-    </div>
+            <button id="submit" class="btn-primary">Submit</button>
+        </div>
 
     </div>
 </body>
