--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
 
 <body>
     <div>
-        <h2 id="banner">Vaccine Slot Notifier</h1>
+        <h2 id="banner"><img src="media/icons/vaccine.png" width="25px" height="25px" style="padding-right: 5px;"/>Vaccine Slot Notifier</h1>
     </div>
     <div>
         <div>
