--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,9 @@
 
 <body>
     <div>
+        <h2 id="banner"><img src="media/icons/vaccine_1.png" width="25px" height="25px" style="padding-right: 5px;"/>Vaccine Slot Notifier</h1>
+    </div>
+    <div>
         <div>
             <div class="section">
                 <div class="heading">
