--- a/popup.html
+++ b/popup.html
@@ -7,8 +7,9 @@
 </head>
 
 <body>
-    <div>
-        <h2 id="banner">Vaccine Slot Notifier</h1>
+    <div id="banner">
+        <img src="media/icons/vaccine_1.png" width="28px" height="28px" style="padding: 5px;" />
+        <h2 id="main-heading">Vaccine Slot Notifier</h1>
     </div>
     <div>
         <div>
