UI changes for popup header

--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
 
 <body>
     <div id="banner">
-        <img src="media/icons/vaccine_1.png" width="28px" height="28px" style="padding: 5px;" />
+        <img src="media/icons/vaccine_1.png" width="28px" height="28px" style="padding: 5px; margin-left:4px;" />
         <h2 id="main-heading">Vaccine Slot Notifier</h1>
     </div>
     <div>
@@ -39,7 +39,7 @@
                 </div>
             </div>
         </div>
-        <div style="margin-top: 12px; margin-right: 5px;">
+        <div style="margin-top: 11px; margin-right: 5px;">
             <button id="submit" class="btn-primary">Submit</button>
         </div>
 
