--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
 
 <body>
     <div id="banner">
-        <img src="media/icons/vaccine_1.png" width="28px" height="28px" style="padding: 5px; margin-left:4px;" />
+        <img src="media/icons/vaccine.ico" width="26px" height="26px" style="padding: 5px; margin-left:4px;" />
         <h2 id="main-heading">Vaccine Slot Notifier</h1>
     </div>
     <div>
