--- a/popup.html
+++ b/popup.html
@@ -15,7 +15,7 @@
         <div>
             <div class="section">
                 <div class="heading">
-                    <h4 id="title" class="label create">Check vaccine slots availablity</h4>
+                    <h4 id="title" class="label create">Check vaccine slots availability</h4>
                     <h4 id="info" class="label view">Vaccine slots are currently being checked for pin:</h4>
                 </div>
                 <div class="inputBox">
